--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i>主頁</a></li>
-                <li><a href="#"><i class="fa-solid fa-user"></i>關於我</a></li>
-                <li><a href="#"><i class="fa-solid fa-briefcase"></i>作品集</a></li>
-                <li><a href="#"><i class="fa-solid fa-server"></i>Service</a></li>
-                <li><a href="#"><i class="fa-solid fa-envelope"></i>取得聯繫</a></li>
+                <li><a href="#home"><i class="fa-solid fa-house"></i>主頁</a></li>
+                <li><a href="#about"><i class="fa-solid fa-user"></i>關於我</a></li>
+                <li><a href="#profolio"><i class="fa-solid fa-briefcase"></i>連結</a></li>
+                <li><a href="#else"><i class="fa-solid fa-server"></i>其他</a></li>
+                <li><a href="#contact"><i class="fa-solid fa-envelope"></i>聯繫方式</a></li>
             </ul>
         </nav>
         <div class="footer">
@@ -77,8 +77,8 @@
                         </div>
                         <div class="icon-list">
                             <ul>
-                                <li><i class="fa-solid fa-angle-right"></i> <strong>興趣:</strong> <span>投資.旅遊.探索未知事物</span></li>
-                                <li><i class="fa-solid fa-angle-right"></i> <strong>專長:</strong> <span>籃球.游泳</span></li>
+                                <li><i class="fa-solid fa-angle-right"></i> <strong>興趣:</strong> <span>樂高.投資.旅遊.探索未知事物</span></li>
+                                <li><i class="fa-solid fa-angle-right"></i> <strong>專長:</strong> <span>籃球.游泳.分享所學</span></li>
                                 <li><i class="fa-solid fa-angle-right"></i> <strong>電子郵件:</strong> <span>darkknight411032@gmail.com</span></li>
                                 </ul>
                         </div>
@@ -226,7 +226,7 @@
 
                     <h2>學歷</h2>
                     <div class="my-edu">
-                        <h3>國立台中科技大學進修部</h3>
+                        <h3>國立臺中科技大學進修部</h3>
                         <span class="sp-box">2018-2022</span>
                         <p><i class="fa-solid fa-toolbox"></i> 資訊工程系</p>
                     </div>
@@ -249,7 +249,7 @@
                         </ul>
                     </div>
                     <div class="work-exp">
-                        <h3>國立台中科技大學資訊工程系</h3>
+                        <h3>國立臺中科技大學資訊工程系</h3>
                         <span class="sp-box">2020-2022</span>
                         <p>行政工讀</p>
                         <ul>
@@ -278,7 +278,7 @@
                         <img src="img/blog-1.jpg" alt="">
                     </div>
                     <div class="port-info">
-                        <h4>經濟市場</h4>
+                        <h4>金融經濟</h4>
                         <p>Finance Notes</p>
                         <a href="#"><i class="fa-regular fa-window-restore"></i></a>
                     </div>
@@ -364,7 +364,7 @@
                         <i class="fa-solid fa-paw"></i>
                     </div>
                     <div class="else-info">
-                        <h4>2022台北市市長盃資料應用黑客松</h4>
+                        <h4>2022臺北市市長盃資料應用黑客松</h4>
                     </div>
                 </div>
 
@@ -385,8 +385,71 @@
                         <h4>工程施工即時影像系統</h4>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="contact">
+
+            <h1 class="sub-heading">聯繫方式</h1>
+            <div class="divider"></div>
+            <p class="sub-para">
+                有任何高見都歡迎寄email指教 謝謝!<br>
+            </p>
+
+            <div class="contact-row">
+
+                <div class="contact-left">
+                    <div class="icon-box">
+                        <div class="icon">
+                            <i class="fa-solid fa-envelope"></i>
+                        </div>
+                        <div class="info">
+                            <h4>電子郵件</h4>
+                            <p>darkknight411032@gmail.com</p>
+                        </div>
+                    </div>
+
+                    <div class="icon-box">
+                        <div class="icon">
+                            <i class="fa-solid fa-phone"></i>
+                        </div>
+                        <div class="info">
+                            <h4>行動電話</h4>
+                            <p>0939-0xx-2xx</p>
+                        </div>
+                    </div>
+
+                    <div class="icon-box">
+                        <div class="icon">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                        <div class="info">
+                            <h4>地址</h4>
+                            <p>臺灣 臺中市</p>
+                        </div>
+                    </div>
+
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10295.399397519424!2d120.68190422125257!
+                        3d24.172666883293726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346917dcc7aa34cf%3A0xd1fb78fa60b9e619!
+                        2z5paH5b-D5bSH5b63!5e0!3m2!1szh-TW!2stw!4v1681301840336!5m2!1szh-TW!2stw" 
+                        width="100%" height="300" style="border:2;" loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+
+                </div>
+                <div class="contact-right">
 
 
+                    <form action="">
+                        <input type="text" name="name" id="name" placeholder="您的大名">
+                        <input type="email" name="email" id="email" placeholder="您的電子郵件">
+                        <input type="text" name="subject" id="subject" placeholder="主旨">
+                        <textarea name="msg" id="msg" rows="9" placeholder="您想建議的事項"></textarea>
+                        <input type="submit" value="送出信件">
+                    </form>
+
+                </div>
 
             </div>
 
@@ -399,4 +462,4 @@
 </body>
 </html>
 
-<!-- 1:30:39 -->
+<!-- 1:32:36 -->
