--- a/finance/finance.html
+++ b/finance/finance.html
@@ -8,24 +8,32 @@
 	<link rel="stylesheet" href="css/finance.css">
 </head>
 <body>
-
-	<nav class="navbar">
-		<a href="#" class="logo">Finance Notes</a>
-		<div class="nav-links">
-			<ul>
-				<li><a href="#">主頁</a></li>
-				<li><a href="#">財經節目</a></li>
+	<header>
+		<div class="navbar">
+			<div class="logo">Finance Notes</div>
+			<ul class="links">
 				<li><a href="#">書籍筆記</a></li>
-				<li><a href="#">與我聯繫</a></li>
+				<li><a href="#">卡爾先生</a></li>
+				<li><a href="#">老王愛說笑</a></li>
+				<li><a href="#">楊世光在金錢爆</a></li>
 			</ul>
+			<div class="toggle_btn">
+				<i class="fa-solid fa-bars"></i>
+			</div>
 		</div>
-	</nav>
-	<header></header>
 
+		<div class="dropdown-menu">
+			<li><a href="#">書籍筆記</a></li>
+			<li><a href="#">卡爾先生</a></li>
+			<li><a href="#">老王愛說笑</a></li>
+			<li><a href="#">楊世光在金錢爆</a></li>
+		</div>
+	</header>
+	<script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
+	<script src="finance.js"></script>
 </body>
 </html>
 
 <!------
-財經節目:老王/楊世光/卡爾先生
-書籍筆記:
+
 ---->
