--- a/finance/finance.html
+++ b/finance/finance.html
@@ -12,10 +12,10 @@
 		<div class="navbar">
 			<div class="logo">Finance Notes</div>
 			<ul class="links">
-				<li><a href="#">書籍筆記</a></li>
-				<li><a href="#">卡爾先生</a></li>
-				<li><a href="#">老王愛說笑</a></li>
-				<li><a href="#">楊世光在金錢爆</a></li>
+				<li><a href="https://www.tcsb.com.tw/v2/official/SalePageCategory/232939?sortMode=Sales">書籍筆記</a></li>
+				<li><a href="https://www.youtube.com/c/%E5%8D%A1%E7%88%BE%E5%85%88%E7%94%9F%E5%8D%B1%E6%A9%9F%E6%8A%95%E8%B3%87%E4%BA%BA">卡爾先生</a></li>
+				<li><a href="https://www.youtube.com/user/winnwang0610">老王愛說笑</a></li>
+				<li><a href="https://www.youtube.com/c/%E9%87%91%E9%8C%A2%E7%88%86">楊世光在金錢爆</a></li>
 			</ul>
 			<div class="toggle_btn">
 				<i class="fa-solid fa-bars"></i>
@@ -23,10 +23,10 @@
 		</div>
 
 		<div class="dropdown-menu">
-			<li><a href="#">書籍筆記</a></li>
-			<li><a href="#">卡爾先生</a></li>
-			<li><a href="#">老王愛說笑</a></li>
-			<li><a href="#">楊世光在金錢爆</a></li>
+			<li><a href="https://www.tcsb.com.tw/v2/official/SalePageCategory/232939?sortMode=Sales">書籍筆記</a></li>
+			<li><a href="https://www.youtube.com/c/%E5%8D%A1%E7%88%BE%E5%85%88%E7%94%9F%E5%8D%B1%E6%A9%9F%E6%8A%95%E8%B3%87%E4%BA%BA">卡爾先生</a></li>
+			<li><a href="https://www.youtube.com/user/winnwang0610">老王愛說笑</a></li>
+			<li><a href="https://www.youtube.com/c/%E9%87%91%E9%8C%A2%E7%88%86">楊世光在金錢爆</a></li>
 		</div>
 	</header>
 	<script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
