--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="profile">
-            <img src="img/profile-img.jpg" alt=""width="150px">
+            <img src="img/witch.jpg" alt=""width="150px">
             <h1>Martin Huang</h1>
             <div class="social-icons">
                 <a href="https://www.facebook.com/profile.php?id=100006934332320"><i class="fa-brands fa-facebook"></i></a>
@@ -292,7 +292,7 @@
                     <div class="port-info">
                         <h4>金融經濟</h4>
                         <p>Finance Notes</p>
-                        <a href="http://localhost/Portfolio/finance/show.php"><i class="fa-solid fa-coins"></i></a>
+                        <a href="#"><i class="fa-solid fa-coins"></i></a>
                     </div>
                 </div>
 
